--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </ul>
        
        <div class='label'>
-        <span><img src="img/icon-hamburger.svg" class='hamburger' alt="Menu"></span>
+        <span><img src="img/icon-hamburger.svg" id='hamburger' alt="Menu"></span>
         <span><img class='hide' src="img/icon-close.svg" id='close' alt="Close Menu"></span>
        </div>
        
